# kitsune2

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  Makefile.toml  README.md  SECURITY_ASSESSMENT.md  flake.nix  rust-toolchain.toml
.github/workflows/: bench.yaml  bootstrap.yaml  docker-build.yaml  prepare-release.yml  publish-release.yml  test.yaml
crates/api/: Cargo.toml  build.rs
crates/api/proto/: agent.proto  fetch.proto  op_store.proto  publish.proto
crates/api/src/: agent.rs  arc.rs  block.rs  bootstrap.rs  builder.rs  config.rs  error.rs  fetch.rs  gossip.rs  id.rs  kitsune.rs  known_peers.rs  lib.rs  op_store.rs  peer_meta_store.rs  peer_store.rs  protocol.rs  publish.rs  report.rs  space.rs  timestamp.rs  transport.rs  tx.rs  url.rs  wire.proto
crates/api/src/doc/: glossary.rs
crates/boot_srv/: Cargo.toml
crates/boot_srv/src/: lib.rs  server.rs  space.rs  store.rs
crates/bootstrap_client/: Cargo.toml
crates/bootstrap_client/src/: lib.rs
crates/bootstrap_client/tests/: connect.rs  integration.rs
crates/bootstrap_srv/: Cargo.toml  Makefile.toml
crates/bootstrap_srv/benches/: iroh_relay_bench.rs
crates/bootstrap_srv/certs/: test_cert.pem  test_key.pem
crates/bootstrap_srv/src/: auth.rs  config.rs  http.rs  iroh_relay.rs  iroh_relay_axum.rs  iroh_relay_metrics.rs  lib.rs  metrics.rs  parse.rs  qad.rs  relay_allowlist.rs  sbd.rs  server.rs  space.rs  store.rs  test.rs
crates/bootstrap_srv/src/test/: iroh_relay.rs  iroh_relay_axum.rs  sbd.rs
crates/bootstrap_srv/tests/: iroh_relay_probe.rs  relay_metrics.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: common.rs  factories.rs  lib.rs
crates/core/src/factories/: core_access.rs  core_bootstrap.rs  core_fetch.rs  core_gossip.rs  core_kitsune.rs  core_known_peers.rs  core_local_agent_store.rs  core_publish.rs  core_report.rs  core_space.rs  mem_block.rs  mem_bootstrap.rs  mem_known_peers.rs  mem_op_store.rs  mem_peer_meta_store.rs  mem_peer_store.rs  mem_transport.rs  stub_transport.rs
crates/core/src/factories/core_bootstrap/: test.rs
crates/core/src/factories/core_fetch/: back_off.rs  message_handler.rs  test.rs
crates/core/src/factories/core_fetch/test/: incoming_request_queue.rs  incoming_response_queue.rs  outgoing_request_queue.rs  receive_responses.rs  request_queue.rs  response_queue.rs
crates/core/src/factories/core_gossip/: test.rs
crates/core/src/factories/core_publish/: message_handler.rs  test.rs
crates/core/src/factories/core_space/: test.rs
crates/core/src/factories/mem_block/: test.rs
crates/core/src/factories/mem_blocks/: test.rs
crates/core/src/factories/mem_bootstrap/: test.rs
crates/core/src/factories/mem_op_store/: test.rs
crates/core/src/factories/mem_peer_meta_store/: test.rs
crates/core/src/factories/mem_peer_store/: test.rs  test_utils.rs
crates/core/src/factories/mem_transport/: test.rs
crates/core/src/factories/stub_transport/: test.rs
crates/core/tests/: fetch.rs
crates/dht/: Cargo.toml  DOCS.md.hbs  build.rs
crates/dht/src/: arc_set.rs  combine.rs  constant.rs  dht.rs  hash.rs  lib.rs  time.rs
crates/dht/src/dht/: snapshot.rs  tests.rs
crates/dht/src/dht/tests/: harness.rs
crates/fetch/: Cargo.toml
crates/fetch/src/: fetch.rs
crates/fetch/src/fetch/: test.rs
crates/fetch_queue/: Cargo.toml
crates/fetch_queue/src/: fetch_queue.rs  fetch_task.rs  lib.rs
crates/fetch_queue/src/fetch_queue/: test.rs
crates/gossip/: Cargo.toml  README.md
crates/gossip/proto/: gossip.proto
crates/gossip/src/: burst.rs  common.rs  config.rs  error.rs  gossip.rs  harness.rs  initiate.rs  lib.rs  peer_meta_store.rs  protocol.rs  respond.rs  state.rs  storage_arc.rs  summary.rs  timeout.rs  types.rs
crates/gossip/src/harness/: op_store.rs
crates/gossip/src/respond/: accept.rs  agents.rs  busy.rs  disc_sector_details_diff.rs  disc_sector_details_diff_response.rs  disc_sectors_diff.rs  harness.rs  hashes.rs  initiate.rs  no_diff.rs  ring_sector_details_diff.rs  ring_sector_details_diff_response.rs  terminate.rs  tests.rs
crates/gossip/tests/: historical_load.rs  initial_sync.rs  latest.rs
crates/kitsune2/: Cargo.toml  Makefile.toml
crates/kitsune2/examples/: generate_test_keypairs.rs  schema.rs
crates/kitsune2/src/: lib.rs
crates/kitsune2/src/factories/: core_space.rs  mem_peer_store.rs
crates/kitsune2/src/factories/mem_peer_store/: test.rs
crates/kitsune2/tests/: blocks.rs  integration.rs  relay_stability.rs
crates/kitsune2_showcase/: Cargo.toml
crates/kitsune2_showcase/src/: app.rs  main.rs  readline.rs
crates/kitsune2_showcase/src/app/: file_data.rs  file_op_store.rs  mod.rs
crates/memory/src/: error.rs  lib.rs  op_store.rs  peer_meta_store.rs
crates/memory/src/op_store/: time_slice_hash_store.rs
crates/test_utils/: Cargo.toml
crates/test_utils/src/: agent.rs  bootstrap.rs  lib.rs  space.rs  test_bootstrap_srv.rs
crates/tool_proto_build/: Makefile.toml
crates/tool_proto_build/src/: main.rs
crates/transport_iroh/: Cargo.toml  Makefile.toml
crates/transport_iroh/src/: connection.rs  connection_context.rs  endpoint.rs  frame.rs  lib.rs  metrics.rs  test.rs  test_utils.rs  url.rs
crates/transport_iroh/src/test_utils/: harness.rs  relay_server.rs
crates/transport_iroh/src/tests/: connect_failure.rs  frame.rs  mod.rs  simultaneous_open.rs  stream.rs  url.rs
crates/transport_iroh/tests/: integration.rs  metrics.rs  relay_auth.rs
crates/transport_tx5/: Cargo.toml
crates/transport_tx5/src/: harness.rs  lib.rs  test.rs
crates/transport_tx5/tests/: integration.rs
dev/bench/: data.js
docker/kitsune2_bootstrap_srv/: Dockerfile
docker/kitsune2_bootstrap_srv_auth_test/: Dockerfile  start-cmd.sh
docker/kitsune2_bootstrap_srv_iroh_relay/: Dockerfile
docker/kitsune2_bootstrap_srv_sbd/: Dockerfile
docker/kitsune2_test_auth_hook_server/: Dockerfile
docs/: docusaurus.config.ts
docs-site/: docusaurus.config.ts  package-lock.json  package.json
docs/src/css/: custom.css
docs/src/pages/: index.tsx
