[package]
name = "kitsune2_boot_srv"
version = "0.0.1-alpha"
description = "p2p / dht communication framework api"
license = "Apache-2.0"
homepage = "https://github.com/holochain/kitsune2"
documentation = "https://docs.rs/kitsune2_boot_srv"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "dht", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
ctrlc = { workspace = true }
ed25519-dalek = { workspace = true }
num_cpus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tiny_http = { workspace = true }
