[package]
name = "kitsune2_fetch"
version = "0.0.1-alpha"
description = "module for fetching kitsune ops from peers"
license = "Apache-2.0"
homepage = "https://github.com/holochain/kitsune2"
documentation = "https://docs.rs/kitsune2_fetch_queue"
authors = ["Holochain Core Dev Team <devcore@holochain.org>"]
keywords = ["holochain", "holo", "p2p", "dht", "networking"]
categories = ["network-programming"]
edition = "2021"

[dependencies]
kitsune2_api = { path = "../api", version = "0.0.1-alpha" }
bytes = { workspace = true }
indexmap = "2.7.0"
serde = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }

[dev-dependencies]
rand = "0.8.5"
