[package]
name = "kitsune2_showcase"
version.workspace = true
description = "kitsune2 p2p / dht showcase app"
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kitsune2_showcase"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive", "wrap_help"] }
kitsune2 = { workspace = true }
rustyline = { version = "15.0.0", features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
