[package]
name = "kitsune2_test_utils"
description = "Test utilities for kitsune2"
version = "0.1.0-nopublish"
edition = "2021"

[dependencies]
kitsune2_bootstrap_srv = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
