[package]
name = "kitsune2_transport_tx5"
version.workspace = true
description = "The Tx5-based transport implementation for kitsune2"
license.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/kitsune2_transport_tx5"
authors.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
kitsune2_api = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
tracing = { workspace = true }
tx5-core = { workspace = true }
tx5 = { workspace = true, default-features = false }
url = { workspace = true }
cfg-if = { workspace = true }

# Feature: schema
schemars = { workspace = true, optional = true }

[dev-dependencies]
kitsune2_core = { workspace = true }
kitsune2_test_utils = { workspace = true }
sbd-server = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[features]
default = ["backend-datachannel", "datachannel-vendored"]

backend-datachannel = ["tx5/backend-libdatachannel"]
datachannel-vendored = ["tx5/datachannel-vendored"]

backend-go-pion = ["tx5/backend-go-pion"]

schema = ["dep:schemars", "tx5/schema"]
